--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "leaflet": "^1.9.2",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-leaflet": "^4.1.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
